--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 	<head>
 		<title>Madison Live Weather</title>
+		
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+		
 		<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
