--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 
 		<script src="https://use.fontawesome.com/b7732d4d89.js"></script>
+		
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-79002319-1', 'auto');
+			ga('send', 'pageview');
+		</script>
 
 		<link href="css/weather-icons.min.css" rel="stylesheet" type="text/css" />
 		<link href="css/weather-icons-wind.min.css" rel="stylesheet" type="text/css" />
