--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
 				background-color: rgba(0, 0, 0, .25);
 				padding: 0 0 1em 0;
 				position: fixed;
-				top: 0%;
-				left: 50%;
-				transform: translate(-50%, -0%);
+				top: 0;
+				left: 0;
 				color: #fff;
 				text-shadow: 0 0 1em rgba(0, 0, 0, .25);
 			}
