--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			main {
 				color: #fff;
 				padding-bottom: 3em;
+				background: rgba(0, 0, 0, 0.1);
 				background: linear-gradient(rgba(0, 0, 0, .5), transparent);
 			}
 
@@ -67,6 +68,7 @@
 				width: 100%;
 				color: #fff;
 				padding-top: 3em;
+				background: rgba(0, 0, 0, 0.1);
 				background: linear-gradient(transparent, rgba(0, 0, 0, .5));
 			}
 
