--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 		<link href="css/weather-icons-wind.min.css" rel="stylesheet" type="text/css" />
 
 		<style>
-			html, body {
+			body {
 				font-family: "Open Sans", sans-serif;
-				background-color: transparent;
+    				background-color: rgba(0, 0, 0, .1);
+    				background: linear-gradient(transparent, transparent);
 			}
 
 			html {
@@ -34,7 +35,7 @@
 			main {
 				color: #fff;
 				padding-bottom: 3em;
-				background: rgba(0, 0, 0, 0.1);
+				background: transparent;
 				background: linear-gradient(rgba(0, 0, 0, .5), transparent);
 			}
 
@@ -68,7 +69,7 @@
 				width: 100%;
 				color: #fff;
 				padding-top: 3em;
-				background: rgba(0, 0, 0, 0.1);
+				background: transparent;
 				background: linear-gradient(transparent, rgba(0, 0, 0, .5));
 			}
 
