adding direction indicator

--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
 			aside.right a {
 				margin-right: .5em;
 			}
+			
+			aside span.cam-dir {
+				width: 2em;
+			}
 
 			@media screen and (max-width:2400px) {
 				h3 { font-size: 5em; }
@@ -303,6 +307,8 @@
 			<a href="#" class="rotate-left">
 				<i class="fa fa-chevron-left"></i>
 			</a>
+
+			<span class="cam-dir"></span>
 
 			<a href="#" class="rotate-right">
 				<i class="fa fa-chevron-right"></i>
