--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 				position: relative;
 				bottom: 2px;
 				text-align: center;
+				font-size: 1.333em;
 			}
 
 			@media screen and (max-width:2400px) {
