--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<link href="css/weather-icons.min.css" rel="stylesheet" type="text/css" />
 		<link href="css/weather-icons-wind.min.css" rel="stylesheet" type="text/css" />
 
+		<link rel="icon" href="weather-icon.png" />
+
 		<style>
 			body {
 				font-family: "Open Sans", sans-serif;
