remove madison, wi text

--- a/index.html
+++ b/index.html
@@ -45,11 +45,6 @@
 
 			h1 {
 				font-size: 7em;
-				margin: 0 0 -.3em 0;
-			}
-
-			h2 {
-				font-size: 3em;
 				margin: 0;
 			}
 
@@ -120,8 +115,7 @@
 			}
 
 			@media screen and (max-width:2050px) {
-				h1 { font-size: 5em; }
-				h2 { font-size: 2em; }
+				h1 { font-size: 5em; margin-bottom: -.05em; }
 				h3 { font-size: 4em; }
 				h4 { font-size: 1.5em; }
 			}
@@ -132,8 +126,7 @@
 			}
 
 			@media screen and (max-width:1400px) {
-				h1 { font-size: 4em; }
-				h2 { font-size: 1.5em; }
+				h1 { font-size: 4em; margin-bottom: -.1em;}
 				h3 { font-size: 2.5em; }
 				h5 { font-size: 1.5em; }
 			}
@@ -304,12 +297,6 @@
 					<h1>
 						<span class="hours">00</span>:<span class="minutes">00</span>:<span class="seconds">00</span>
 					</h1>
-				</div>
-			</div>
-
-			<div class="row expanded">
-				<div class="small-12 columns">
-					<h2>Madison, WI</h2>
 				</div>
 			</div>
 		</footer>
