adjusted padding at bottom

--- a/index.html
+++ b/index.html
@@ -139,11 +139,13 @@
 			/*** MEDIUM ***/
 
 			@media screen and (max-width:1023px) {
+				h1 { margin-bottom: 0; }
 				h3 { font-size: 4em; }
 				h4 { font-size: 1.5em; }
 			}
 
 			@media screen and (max-width:900px) {
+				h1 { margin-bottom: -.1em; }
 				h3 { font-size: 3em; }
 				h4 { font-size: 1em; }
 			}
